// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pf4SelectWrapper /> should render correctly 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={Object {}}
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    isValid={true}
  >
    <div
      className="pf-c-form__group"
      isValid={true}
    >
      <div
        className="pf-c-form__group-control"
      >
        <Select
          FieldProvider={[Function]}
          id="bazz"
          input={
            Object {
              "name": "bazz",
              "onChange": [MockFunction],
              "value": "",
            }
          }
          isValid={true}
          options={
            Array [
              Object {
                "label": "Foo",
                "value": "bar",
              },
            ]
          }
        >
          <FormSelect
            FieldProvider={[Function]}
            className=""
            id="bazz"
            isDisabled={false}
            isRequired={false}
            isValid={true}
            name="bazz"
            onBlur={[Function]}
            onChange={[MockFunction]}
            onFocus={[Function]}
            ouiaSafe={true}
            validated="default"
            value=""
          >
            <select
              FieldProvider={[Function]}
              aria-invalid={false}
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-FormSelect-default-1"
              data-ouia-component-type="PF4/FormSelect"
              data-ouia-safe={true}
              disabled={false}
              id="bazz"
              isValid={true}
              name="bazz"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value=""
            >
              <FormSelectOption
                key="None"
                label="None"
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                >
                  None
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="bar"
                label="Foo"
                value="bar"
              >
                <option
                  className=""
                  disabled={false}
                  value="bar"
                >
                  Foo
                </option>
              </FormSelectOption>
            </select>
          </FormSelect>
        </Select>
      </div>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;

exports[`<Pf4SelectWrapper /> should render correctly in error state 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={
    Object {
      "error": "Error",
      "touched": true,
    }
  }
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    helperTextInvalid="Error"
    isValid={false}
  >
    <div
      className="pf-c-form__group"
      isValid={false}
    >
      <div
        className="pf-c-form__group-control"
      >
        <Select
          FieldProvider={[Function]}
          id="bazz"
          input={
            Object {
              "name": "bazz",
              "onChange": [MockFunction],
              "value": "",
            }
          }
          isValid={false}
          options={
            Array [
              Object {
                "label": "Foo",
                "value": "bar",
              },
            ]
          }
        >
          <FormSelect
            FieldProvider={[Function]}
            className=""
            id="bazz"
            isDisabled={false}
            isRequired={false}
            isValid={false}
            name="bazz"
            onBlur={[Function]}
            onChange={[MockFunction]}
            onFocus={[Function]}
            ouiaSafe={true}
            validated="default"
            value=""
          >
            <select
              FieldProvider={[Function]}
              aria-invalid={false}
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-FormSelect-default-6"
              data-ouia-component-type="PF4/FormSelect"
              data-ouia-safe={true}
              disabled={false}
              id="bazz"
              isValid={false}
              name="bazz"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value=""
            >
              <FormSelectOption
                key="None"
                label="None"
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                >
                  None
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="bar"
                label="Foo"
                value="bar"
              >
                <option
                  className=""
                  disabled={false}
                  value="bar"
                >
                  Foo
                </option>
              </FormSelectOption>
            </select>
          </FormSelect>
        </Select>
      </div>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;

exports[`<Pf4SelectWrapper /> should render correctly with description 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  description="description"
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={Object {}}
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    isValid={true}
  >
    <div
      className="pf-c-form__group"
      isValid={true}
    >
      <div
        className="pf-c-form__group-control"
      >
        <TextContent>
          <div
            className="pf-c-content"
          >
            <Text
              component="small"
            >
              <small
                className=""
                data-pf-content={true}
              >
                description
              </small>
            </Text>
          </div>
        </TextContent>
        <Select
          FieldProvider={[Function]}
          id="bazz"
          input={
            Object {
              "name": "bazz",
              "onChange": [MockFunction],
              "value": "",
            }
          }
          isValid={true}
          options={
            Array [
              Object {
                "label": "Foo",
                "value": "bar",
              },
            ]
          }
        >
          <FormSelect
            FieldProvider={[Function]}
            className=""
            id="bazz"
            isDisabled={false}
            isRequired={false}
            isValid={true}
            name="bazz"
            onBlur={[Function]}
            onChange={[MockFunction]}
            onFocus={[Function]}
            ouiaSafe={true}
            validated="default"
            value=""
          >
            <select
              FieldProvider={[Function]}
              aria-invalid={false}
              className="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-FormSelect-default-7"
              data-ouia-component-type="PF4/FormSelect"
              data-ouia-safe={true}
              disabled={false}
              id="bazz"
              isValid={true}
              name="bazz"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value=""
            >
              <FormSelectOption
                key="None"
                label="None"
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                >
                  None
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="bar"
                label="Foo"
                value="bar"
              >
                <option
                  className=""
                  disabled={false}
                  value="bar"
                >
                  Foo
                </option>
              </FormSelectOption>
            </select>
          </FormSelect>
        </Select>
      </div>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;
